# vertex-agent-engine-ge

demo-eng/: .gitignore  README.md
demo-eng/.agents/rules/: system-design-update.md
demo-eng/adk_agents/: README.md  fix_eval_args.py  pyproject.toml  test_eval_loop.py  uv.lock.bak
demo-eng/adk_agents/ad_generation_agent/: .env  .env.n26-genkey-fabricofuint  .env.nrf-marketing-demo-1509  .env_old  .gitignore  README.md  SYSTEM_DESIGN.md  create_reference_images.py  gcs_fetch_references.md  pyproject.toml  test_evals.py
demo-eng/adk_agents/ad_generation_agent/ad_generation_agent/: agent.py  prompt.md
demo-eng/adk_agents/ad_generation_agent/ad_generation_agent/func_tools/: UNUSED_generate_storyline.py  combine_video.py  evaluate_ad.py  generate_ad_hoc_image.py  generate_asset_sheet.py  generate_audio.py  generate_display_ad.py  generate_scene_frame.py  generate_storyboard_image_batch.py  generate_video.py  retrieve_brand_identity.py  retrieve_generated_assets.py  save_text_artifact.py
demo-eng/adk_agents/ad_generation_agent/ad_generation_agent/prompts/: asset_sheet_generation_prompt.md  display_ad_generation_prompt.md  final_ad_evaluation_prompt.md  image_evaluation_prompt.md  scene_frame_generation_prompt.md  video_director_enhancement_prompt.md  video_evaluation_prompt.md  video_technical_mandates_prompt.md
demo-eng/adk_agents/ad_generation_agent/ad_generation_agent/utils/: ad_generation_constants.py  creative.py  eval_result.py  evaluate_media.py  image_generation.py  video_generation.py
demo-eng/adk_agents/ad_generation_agent/brand_configs/: allstate.toml  example_brand.toml  organic_living_collection.toml  vantus.toml
demo-eng/adk_agents/ad_generation_agent/deployment_config/: 3.20260119.1-1445-prod.json  4.20260224.1-1509-prod.json  4.20260224.1-1605-prod.json  4.20260224.1-fabricofuint-prod.json  4.20260310.1-1509-staging.json  final.json
demo-eng/adk_agents/ad_generation_agent/evals/: ad_hoc_reference_generation.test.json  display_ad_routing.test.json  long_context_asset_retrieval.test.json  multi_turn_first_frame_reuse.test.json  storyboard_hierarchy.test.json  strict_portrait_aspect_ratio.test.json  test_config.json
demo-eng/adk_agents/adk_common/: README.md  pyproject.toml
demo-eng/adk_agents/adk_common/adk_common/media_generation/: image_generation.py  video_generation.py
demo-eng/adk_agents/adk_common/adk_common/utils/: utils_logging.py
demo-eng/adk_agents/genmedia_agent/: README.md  pyproject.toml
demo-eng/adk_agents/genmedia_agent/deployment_config/: 3.20251118.1-example-prod.json
demo-eng/adk_agents/genmedia_agent/genmedia_agent/: agent.py  prompt.md
demo-eng/adk_agents/marketing_orchestrator/: README.md  pyproject.toml  requirements.txt
demo-eng/adk_agents/marketing_orchestrator/deployment_config/: 3.20251118.1-1445-prod.json
demo-eng/adk_agents/marketing_orchestrator/marketing_orchestrator/: prompt.md
demo-eng/adk_agents/marketing_plan_agent/: README.md  pyproject.toml
demo-eng/adk_agents/marketing_plan_agent/deployment_config/: 4.20260310.1-1509-staging.json
demo-eng/adk_agents/marketing_plan_agent/marketing_plan_agent/: agent.py  prompt.md
demo-eng/adk_agents/nrf_marketing_analyst_agent/: .env  README.md  pyproject.toml
demo-eng/adk_agents/nrf_marketing_analyst_agent/deployment_config/: prod-3.20260119.1.json  staging-4.20260219.1.json
demo-eng/adk_agents/nrf_marketing_analyst_agent/nrf_marketing_analyst_agent/: __init__.py  agent.py  campaign_utils.py  data_campaigns.xml  prompt.md
demo-eng/adk_agents/scripts/: fix-gcs-permissions-v2.py
demo-eng/environment_builder/: process_products.py
demo-eng/sql-agent/: README.md  env  pyproject.toml
demo-eng/sql-agent/sql_agent/sub_agents/bigquery/: agent.py  prompts.py  tools.py
demo-eng/sql-agent/sql_agent/utils/: utils_prompts.py
marketing-multi-agents/: README.md
marketing-multi-agents/adk_agents/: deploy.py  fix_eval_partial_args.py
marketing-multi-agents/adk_agents/ad_generation_agent/: .gitignore  create_reference_images.py
marketing-multi-agents/adk_agents/ad_generation_agent/ad_generation_agent/: prompt.md
marketing-multi-agents/adk_agents/ad_generation_agent/ad_generation_agent/func_tools/: combine_video.py  generate_ad_hoc_image.py  generate_audio.py  generate_storyboard_image_batch.py  retrieve_generated_assets.py  select_product.py
marketing-multi-agents/adk_agents/ad_generation_agent/ad_generation_agent/prompts/: ad_hoc_image_generation_prompt.md  (+4 more)
marketing-multi-agents/adk_agents/ad_generation_agent/brand_configs/: cymbal.toml
marketing-multi-agents/adk_agents/ad_generation_agent/deployment_config/: 4.20260310.1-1509-staging.json
marketing-multi-agents/adk_agents/ad_generation_agent/evals/: anti_hallucination_scripting.test.json  asset_gap_fill_batch.test.json  missing_assets_validation.test.json  multi_turn_first_frame_reuse.test.json  reference_video_modality_routing.test.json  strict_portrait_aspect_ratio.test.json
marketing-multi-agents/adk_agents/adk_common/: pyproject.toml
marketing-multi-agents/adk_agents/genmedia_agent/deployment_config/: 3.20251118.1-example-prod.json
marketing-multi-agents/adk_agents/genmedia_agent/genmedia_agent/: agent.py
marketing-multi-agents/adk_agents/marketing_orchestrator/: .gitignore
marketing-multi-agents/adk_agents/marketing_orchestrator/marketing_orchestrator/: __init__.py  agent.py
marketing-multi-agents/adk_agents/marketing_plan_agent/: pyproject.toml
marketing-multi-agents/adk_agents/marketing_plan_agent/marketing_plan_agent/: .env  __init__.py  agent.py
marketing-multi-agents/adk_agents/scripts/: fix-gcs-permissions.py
marketing-multi-agents/environment_builder/: README.md
marketing-multi-agents/sql-agent/: .env.example  .gitignore  deploy.py
marketing-multi-agents/sql-agent/sql_agent/: agent.py  prompt.md  prompts.py
marketing-multi-agents/sql-agent/sql_agent/shared_libraries/: __init__.py  callbacks.py
marketing-multi-agents/sql-agent/sql_agent/sub_agents/: __init__.py
marketing-multi-agents/sql-agent/sql_agent/utils/: create_bq_table.py  utils.py  utils_agents.py
(+18 files in other folders)
