[project]
name = "adk-agents-workspace"
version = "3.20251118.1"
requires-python = "==3.13.*"
dependencies = [
    "adk_common",
    "ad_generation_agent",
    "marketing_orchestrator",
    "marketing_plan_agent",
    "genmedia_agent",
    "google-adk[eval]==1.27.4",
    "pytest-asyncio==1.3.0",
]

[tool.uv.workspace]
members = [
    "adk_common",
    "marketing_orchestrator",
    "ad_generation_agent",
    "marketing_plan_agent",
    "genmedia_agent",
    # Add other agents as needed
]

[tool.uv.sources]
adk_common = { workspace = true }
ad_generation_agent = { workspace = true }
marketing_plan_agent = { workspace = true }
genmedia_agent = { workspace = true }
marketing_orchestrator = { workspace = true }

