[project]
name = "ad_generation_agent"
version = "4.20260224.1"
description = "Product Catalog Ad Generation Agent"
authors = [{ name = "Gonzalo Varela", email = "gvarelal@google.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk==1.24.1",
    "google-cloud-aiplatform[adk,agent-engines]==1.136.0",
    "google-cloud-bigquery==3.38.0",
    "google-genai==1.62.0",
    "pydantic==2.11.7",
    "absl-py==2.3.1",
    "python-dotenv==1.1.1",
    "pandas==2.3.3",
    "toolbox-core==0.5.3",
    "moviepy==2.2.1",
    "google-cloud-texttospeech==2.33.0",
    "soundfile==0.13.1",
    "aiohttp==3.13.3",
    "adk_common",
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["ad_generation_agent"]
