[project]
name = "adk_common"
version = "3.20251118.1"
description = "Common utilities for Tahoe agents"
authors = [{ name = "Gonzalo Varela", email = "gvarelal@google.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk==1.26.0",
    "python-dotenv==1.2.2",
    "google-genai==1.66.0",
    "google-cloud-aiplatform[adk,agent-engines]==1.140.0",
    "pydantic==2.12.5",
    "absl-py==2.4.0",
    "requests==2.32.5",
    "google-cloud-storage==3.9.0",
    "tenacity==9.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["adk_common"]
