[project]
name = "genmedia_agent"
version = "3.20251118.1"
description = "GenMedia Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk==1.27.4",
    "python-dotenv==1.2.2",
    "google-genai==1.66.0",
    "google-cloud-aiplatform[adk,agent-engines]==1.140.0",
    "pydantic==2.12.5",
    "absl-py==2.4.0",
    "pillow==11.1.0",
    "ad_generation_agent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["genmedia_agent"]

