[project]
name = "nrf_marketing_analyst_agent"
version = "4.20260219.1"
description = "NRF Marketing Analyst Agent"
authors = [{ name = "Gonzalo Varela", email = "gvarelal@google.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk==1.24.1",
    "python-dotenv==1.1.1",
    "google-genai==1.62.0",
    "google-cloud-aiplatform[adk,agent-engines]==1.136.0",
    "pydantic==2.11.7",
    "absl-py==2.3.1",
    "adk_common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nrf_marketing_analyst_agent"]
