[project]
name = "nrf_marketing_analyst_agent"
version = "4.20260219.1"
description = "NRF Marketing Analyst Agent"
authors = [{ name = "Gonzalo Varela", email = "gvarelal@google.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk==1.26.0",
    "python-dotenv==1.2.2",
    "google-genai==1.66.0",
    "google-cloud-aiplatform[adk,agent-engines]==1.140.0",
    "pydantic==2.12.5",
    "absl-py==2.4.0",
    "adk_common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nrf_marketing_analyst_agent"]
